hack/lib/mesh_resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: knative-serving
  labels:
    istio.io/rev: knative-istio
---
apiVersion: v1
kind: Namespace
metadata:
  name: knative-serving-ingress
  labels:
    istio.io/rev: knative-istio
---
apiVersion: v1
kind: Namespace
metadata:
  name: knative-eventing
  labels:
    istio.io/rev: knative-istio
---
apiVersion: v1
kind: Namespace
metadata:
  name: serving-tests
  labels:
    istio.io/rev: knative-istio
---
apiVersion: v1
kind: Namespace
metadata:
  name: serving-tests-alt
  labels:
    istio.io/rev: knative-istio
---
apiVersion: v1
kind: Namespace
metadata:
  name: serverless-tests
  labels:
    istio.io/rev: knative-istio
---
# Additional namespaces for upgrade tests
apiVersion: v1
kind: Namespace
metadata:
  name: eventing-e2e0
  labels:
    istio.io/rev: knative-istio
---
apiVersion: v1
kind: Namespace
metadata:
  name: eventing-e2e1
  labels:
    istio.io/rev: knative-istio
---
apiVersion: v1
kind: Namespace
metadata:
  name: eventing-e2e2
  labels:
    istio.io/rev: knative-istio
---
apiVersion: v1
kind: Namespace
metadata:
  name: eventing-e2e3
  labels:
    istio.io/rev: knative-istio
---
apiVersion: v1
kind: Namespace
metadata:
  name: eventing-e2e4
  labels:
    istio.io/rev: knative-istio
---
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-1
  labels:
    istio.io/rev: knative-istio
---
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-2
  labels:
    istio.io/rev: knative-istio
