hack/lib/mesh_resources/peer-authentication-mesh-mtls.yaml
# this forces the whole mesh to mTLS only
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: mesh-mtls
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
