hack/lib/mesh_resources/smmr.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: serving-tests
---
apiVersion: v1
kind: Namespace
metadata:
  name: serving-tests-alt
