hack/lib/mesh_resources/authorization-policy-knative-eventing.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-serverless-tests-mt-channel-based-broker
  namespace: knative-eventing
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/component: "broker-ingress"
  rules:
    - from:
        - source:
            namespaces: [ "serverless-tests" ]
      to:
        - operation:
            methods: [ "POST" ]
            paths: [ "/serverless-tests/*" ]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-mt-channel-based-broker-ingress-to-imc-dispatcher
  namespace: knative-eventing
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/component: "imc-dispatcher"
  rules:
    - from:
        - source:
            namespaces: [ "knative-eventing" ]
            principals: [ "cluster.local/ns/knative-eventing/sa/mt-broker-ingress" ]
      to:
        - operation:
            methods: [ "POST" ]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-imc-dispatcher-to-mt-channel-based-broker-filter
  namespace: knative-eventing
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/component: "broker-filter"
  rules:
    - from:
        - source:
            namespaces: [ "knative-eventing" ]
            principals: [ "cluster.local/ns/knative-eventing/sa/imc-dispatcher" ]
      to:
        - operation:
            methods: [ "POST" ]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-serverless-tests-imc-dispatcher
  namespace: knative-eventing
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/component: "imc-dispatcher"
  rules:
    - from:
        - source:
            namespaces: [ "serverless-tests" ]
      to:
        - operation:
            hosts: [ "*.serverless-tests.svc.cluster.local" ]
            methods: [ "POST" ]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-serverless-tests-mt-channel-based-broker-reply
  namespace: knative-eventing
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/component: "broker-ingress"
  rules:
    - from:
        - source:
            namespaces:
              - "knative-eventing"
            principals:
              - "cluster.local/ns/knative-eventing/sa/imc-dispatcher"
              - "cluster.local/ns/knative-eventing/sa/mt-broker-filter"
              - "cluster.local/ns/knative-eventing/sa/kafka-channel-dispatcher"
      to:
        - operation:
            paths:
              - "/serverless-tests/*"
            methods: [ "POST" ]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-serverless-tests-kafka-broker-reply
  namespace: knative-eventing
spec:
  action: ALLOW
  selector:
    matchLabels:
      app.kubernetes.io/component: "kafka-broker-receiver"
  rules:
    - from:
        - source:
            namespaces:
              - "knative-eventing"
            principals:
              - "cluster.local/ns/knative-eventing/sa/kafka-broker-dispatcher"
      to:
        - operation:
            paths:
              - "/serverless-tests/*"
            methods: [ "POST" ]
